fix spacing

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ article {
 .article_body {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .right_chevron {
